// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <h1>
    Button view
  </h1>
  

  <button
    class="button rounded svelte-n2tx93"
  >
    <strong>
      Round
       corners
    </strong>
    <br />
    
  
    
    
  
    <!---->
    You clicked
    : 
    0
  </button>
  

  <p>
    A little text to show this is a view.
  </p>
  

  <p>
    If we need to test components in a Svelte environment, for instance to test slot behaviour,
  </p>
  

  <p>
    then wrapping the component up in a view
  </p>
  

  <p>
    made just for the story is the simplest way to achieve this.
  </p>
</section>
`;

exports[`Storyshots Button square 1`] = `
<section
  class="storybook-snapshot-container"
>
  <h1>
    Button view
  </h1>
  

  <button
    class="button  svelte-n2tx93"
  >
    <strong>
      Square
       corners
    </strong>
    <br />
    
  
    
    
  
    <!---->
    You clicked
    : 
    0
  </button>
  

  <p>
    A little text to show this is a view.
  </p>
  

  <p>
    If we need to test components in a Svelte environment, for instance to test slot behaviour,
  </p>
  

  <p>
    then wrapping the component up in a view
  </p>
  

  <p>
    made just for the story is the simplest way to achieve this.
  </p>
</section>
`;

exports[`Storyshots Welcome Welcome 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="main svelte-1unvhkg"
  >
    <h1>
      Welcome to Storybook for Svelte
    </h1>
    
			  
    <p>
      
			    This is a UI component dev environment for your svelte app.
			  
    </p>
    
			  
    <p>
      
			    We've added some basic stories inside the 
      <code
        class="code svelte-1unvhkg"
      >
        src/stories
      </code>
       directory.
			    
      <strong>
        A story is like a visual test case
      </strong>
      
			    and represents a single state of one or more UI components.
			    You can have as many stories as you want.
			  
    </p>
    

			  
    <h1
      class="logo svelte-1unvhkg"
    >
      Svelte
    </h1>
    

			  
    <p>
      
			    Just like that, you can add your own components as stories.
			    You can also edit those components and see changes right away.
			    
      <br />
      
			    (Try editing the 
      <code
        class="code svelte-1unvhkg"
      >
        Button
      </code>
       component
			    located at 
      <code
        class="code svelte-1unvhkg"
      >
        src/stories/views/Welcome.svelte
      </code>
      .)
			  
    </p>
    
			  
    <p>
      
			    Usually we create stories with smaller UI components in the app.
      <br />
      
			    Have a look at the
			    
      <a
        class="link svelte-1unvhkg"
        href="https://storybook.js.org/basics/writing-stories"
        target="_blank"
      >
        Writing Stories
      </a>
      
			    section in our documentation.
			  
    </p>
    
			  
    <p
      class="note svelte-1unvhkg"
    >
      <b>
        NOTE:
      </b>
      
			    
      <br />
      
			    Have a look at the
			    
      <code
        class="code svelte-1unvhkg"
      >
        .storybook/webpack.config.js
      </code>
      
			    to add webpack
			    loaders and plugins you are using in this project.
			  
    </p>
  </div>
</section>
`;
